# Custom_Labels

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json
src/: add_label_layer.cpp  add_label_layer.hpp  attempts_label_settings.cpp  clicks_label_settings.cpp  clock_label_settings.cpp  custom_label_settings.cpp  custom_setting.cpp  custom_setting.hpp  default_label_settings.cpp  globals.cpp  globals.hpp  jumps_label_settings.cpp  label_cell.cpp  label_cell.hpp  label_list_layer.cpp  label_list_layer.hpp  main.cpp  setting_layers.hpp  settings_layer.cpp  testmode_label_settings.cpp  time_label_settings.cpp
